--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
             </p>
         </div>
         <div class="media text-muted pt-3">
-            <img data-src="holder.js/32x32?text=MJ&bg=e83e8c&fg=fff&size=8" alt="" class="mr-2 rounded">
+            <img data-src="holder.js/32x32?text=MJ&bg=e83e8c&fg=fff&size=8/auto" alt="" class="mr-2 rounded">
             <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                 <span class="d-block"><strong class="text-gray-dark">@username</strong> <small>· 2hrs</small></span>
                 Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
