--- a/templates/email/registration.html.twig
+++ b/templates/email/registration.html.twig
@@ -1,7 +1,5 @@
-<h3>Welcome to the app</h3>
-
-<p>Hello {{ user.fullName }}! You just registered to the app!</p>
-
-<p>Please, confirm it by clicking next link {{ url('security_confirm', {'token': user.confirmationToken}) }}</p>
-
-<p>To login, go to <a href="{{ url('security_login') }}">login page</a></p>
+{{ email.registration|trans({
+    '%name%': user.fullName,
+    '%confirm-link%': url('security_confirm', {'token': user.confirmationToken}),
+    '%login-link%': url('security_login')
+})|raw }}
