--- a/templates/micro-post/user-posts.html.twig
+++ b/templates/micro-post/user-posts.html.twig
@@ -27,7 +27,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">
-                    Followers
+                    {{ 'Followers'|transchoice(user.followers|length) }}
                 </h5>
             </div>
             <ul class="list-group list-group-flush">
@@ -43,7 +43,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">
-                    Following
+                    {{ 'Following'|transchoice(user.following|length) }}
                 </h5>
             </div>
             <ul class="list-group list-group-flush">
